src/objects/c2g__codaPaymentAccountLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Summary of account values for payment.</description>
    <fields>
        <fullName>c2g__AccountSelected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PaymentAccountLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BelongToCurrentRefine__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Belong To Current Refine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Cancel_Payment_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Payment Criteria</label>
        <referenceTo>c2g__codaVoidPaymentCriteria__c</referenceTo>
        <relationshipLabel>Payment Summaries</relationshipLabel>
        <relationshipName>Payment_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DetailModified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountTotal__c</fullName>
        <label>Discount Total</label>
        <summarizedField>c2g__codaPaymentLineItem__c.c2g__Discount__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentLineItem__c.c2g__TransactionSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentLineItem__c.c2g__PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountWithAll__c</fullName>
        <label>Discount With All</label>
        <summarizedField>c2g__codaPaymentLineItem__c.c2g__Discount__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentLineItem__c.c2g__BelongToCurrentRefine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentLineItem__c.c2g__PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GrossValueTotal__c</fullName>
        <label>Gross Value Total</label>
        <summarizedField>c2g__codaPaymentLineItem__c.c2g__GrossValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentLineItem__c.c2g__TransactionSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentLineItem__c.c2g__PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValueWithAll__c</fullName>
        <label>Gross Value With All</label>
        <summarizedField>c2g__codaPaymentLineItem__c.c2g__GrossValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentLineItem__c.c2g__BelongToCurrentRefine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentLineItem__c.c2g__PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueTotal__c</fullName>
        <label>Payment Value Total</label>
        <summarizedField>c2g__codaPaymentLineItem__c.c2g__TransactionValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentLineItem__c.c2g__TransactionSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentLineItem__c.c2g__PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueWithAll__c</fullName>
        <label>Payment Value With All</label>
        <summarizedField>c2g__codaPaymentLineItem__c.c2g__TransactionValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentLineItem__c.c2g__BelongToCurrentRefine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentLineItem__c.c2g__PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>DEPRECATED: Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipName>PaymentAccountLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Summary</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Payment__c</columns>
        <columns>c2g__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Account Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>